[gd_scene load_steps=40 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SkyContainer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/AudioStream.gd" type="Script" id=4]
[ext_resource path="res://SampleLibrary.tres" type="SampleLibrary" id=5]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=6]
[ext_resource path="res://Art/SolidWhite.png" type="Texture" id=7]
[ext_resource path="res://Art/GUI/StoreLeave.png" type="Texture" id=8]
[ext_resource path="res://Art/GUI/StoreWood.png" type="Texture" id=9]
[ext_resource path="res://Art/GUI/StoreStone.png" type="Texture" id=10]
[ext_resource path="res://Art/GUI/StoreHealth.png" type="Texture" id=11]
[ext_resource path="res://Art/GUI/StoreSpeed.png" type="Texture" id=12]
[ext_resource path="res://Art/GUI/StoreWeapon.png" type="Texture" id=13]
[ext_resource path="res://Art/GUI/StoreTower.png" type="Texture" id=14]
[ext_resource path="res://Art/GUI/StoreAutomaticWeapon.png" type="Texture" id=15]
[ext_resource path="res://Art/GUI/StoreAutomaticResources.png" type="Texture" id=16]
[ext_resource path="res://Art/GUI/Cartwheel Big.fnt" type="BitmapFont" id=17]
[ext_resource path="res://Art/WoodPiece.png" type="Texture" id=18]
[ext_resource path="res://Art/StonePiece.png" type="Texture" id=19]
[ext_resource path="res://Art/DiamondPiece.png" type="Texture" id=20]
[ext_resource path="res://Art/GUI/Kayak.fnt" type="BitmapFont" id=21]
[ext_resource path="res://Art/GUI/GUIResources.png" type="Texture" id=22]
[ext_resource path="res://Art/GUI/Cartwheel.fnt" type="BitmapFont" id=23]
[ext_resource path="res://Art/GUI/GUIPlayer1Health.png" type="Texture" id=24]
[ext_resource path="res://Art/GUI/GUIPlayer1HealthBar.png" type="Texture" id=25]
[ext_resource path="res://Art/GUI/GUIPlayer1Life.png" type="Texture" id=26]
[ext_resource path="res://Art/GUI/GUIPlayerHead.png" type="Texture" id=27]
[ext_resource path="res://Art/GUI/GUIPlayer2Health.png" type="Texture" id=28]
[ext_resource path="res://Art/GUI/GUIPlayer2HealthBar.png" type="Texture" id=29]
[ext_resource path="res://Art/GUI/GUIPlayer2Life.png" type="Texture" id=30]
[ext_resource path="res://Art/ForestBackgroundTwo.png" type="Texture" id=31]
[ext_resource path="res://Art/ForestBackground.png" type="Texture" id=32]
[ext_resource path="res://Art/Portal/PortalBase.png" type="Texture" id=33]
[ext_resource path="res://Scripts/Portal.gd" type="Script" id=34]
[ext_resource path="res://Art/Portal/PortalThunderBack1.png" type="Texture" id=35]
[ext_resource path="res://Art/Portal/PortalThunderBack2.png" type="Texture" id=36]
[ext_resource path="res://Art/Portal/PortalThunder1.png" type="Texture" id=37]
[ext_resource path="res://Art/Portal/PortalThunder2.png" type="Texture" id=38]
[ext_resource path="res://Art/Light.png" type="Texture" id=39]

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]

transform/pos = Vector2( 513.09, 300.634 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -1000000
limit/top = -1000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 15.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Messages" type="Node" parent="."]

process/pause_mode = 2
script/script = ExtResource( 2 )

[node name="SkyContainer" type="Node" parent="."]

script/script = ExtResource( 3 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = true
stream/loop_restart_time = 0.0
stream/buffering_ms = 500
script/script = ExtResource( 4 )

[node name="MainSamplePlayer" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 5 )
config/pitch_random = 0.3

[node name="MakeStuffDarker" type="CanvasModulate" parent="."]

z/relative = false
color = Color( 0.203125, 0.149961, 0.149963, 1 )

[node name="GUI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="GUI"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 6 )

[node name="BuyingMenu" type="TextureFrame" parent="GUI/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 512.0
margin/bottom = 600.0
texture = ExtResource( 7 )
modulate = Color( 0.894531, 0.703439, 0.405334, 1 )
expand = true
stretch_mode = 0

[node name="SelectionCursor" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

visibility/opacity = 0.25
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 110.0
margin/right = 155.0
margin/bottom = 260.0
texture = ExtResource( 7 )
modulate = Color( 0.289063, 0.0700073, 0.0700073, 1 )
expand = true
stretch_mode = 0

[node name="LeaveButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="WoodButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 179.0
margin/top = 132.0
margin/right = 229.0
margin/bottom = 182.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 0

[node name="StoneButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 0

[node name="LivesButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 0

[node name="SpeedButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 0

[node name="WeaponsButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 0

[node name="TowerHealthButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 0

[node name="DefenseButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 15 )
expand = true
stretch_mode = 0

[node name="RegrowButton" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 130.0
margin/right = 542.0
margin/bottom = 290.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 0

[node name="Description" type="TextureFrame" parent="GUI/Control/BuyingMenu"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 488.0
margin/right = 494.0
margin/bottom = 588.0
texture = ExtResource( 7 )
modulate = Color( 0, 0, 0, 0.470588 )
expand = true
stretch_mode = 0

[node name="WoodText" type="Label" parent="GUI/Control/BuyingMenu/Description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 19.0
margin/right = 72.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.0941176, 0.054902, 0.00784314, 1 )
text = "4"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WoodTexture" type="TextureFrame" parent="GUI/Control/BuyingMenu/Description"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 79.0
margin/top = 11.0
margin/right = 267.0
margin/bottom = 171.0
texture = ExtResource( 18 )
stretch_mode = 0

[node name="StoneText" type="Label" parent="GUI/Control/BuyingMenu/Description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 179.0
margin/top = 19.0
margin/right = 248.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.172549, 0.168627, 0.164706, 1 )
text = "4"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StoneTexture" type="TextureFrame" parent="GUI/Control/BuyingMenu/Description"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 244.0
margin/top = 11.0
margin/right = 433.0
margin/bottom = 171.0
texture = ExtResource( 19 )
stretch_mode = 0

[node name="DiamondText" type="Label" parent="GUI/Control/BuyingMenu/Description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 349.0
margin/top = 19.0
margin/right = 423.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.27451, 0.0196078, 0.368627, 1 )
text = "4"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DiamondTexture" type="TextureFrame" parent="GUI/Control/BuyingMenu/Description"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 429.0
margin/top = 11.0
margin/right = 618.0
margin/bottom = 171.0
texture = ExtResource( 20 )
stretch_mode = 0

[node name="ActualDescription" type="Label" parent="GUI/Control/BuyingMenu/Description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -25.0
margin/right = 224.0
margin/bottom = -3.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.132813, 0.0160828, 0.0160828, 1 )
text = "Leave store without buying."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resources" type="Sprite" parent="GUI/Control"]

editor/display_folded = true
transform/pos = Vector2( 524.099, 0 )
transform/scale = Vector2( 0.672678, 0.672678 )
texture = ExtResource( 22 )
centered = false
offset = Vector2( -387, 0 )

[node name="WoodText" type="Label" parent="GUI/Control/Resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -186.0
margin/top = 63.0
margin/right = -134.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.0976563, 0.0584364, 0.00801086, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StoneText" type="Label" parent="GUI/Control/Resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 57.0
margin/top = 63.0
margin/right = 109.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.175781, 0.171576, 0.166168, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DiamondText" type="Label" parent="GUI/Control/Resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 273.0
margin/top = 63.0
margin/right = 325.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.277913, 0.0202942, 0.371094, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player1Health" type="Sprite" parent="GUI/Control"]

editor/display_folded = true
transform/pos = Vector2( -0.781146, 0.529537 )
transform/scale = Vector2( 0.672678, 0.672678 )
texture = ExtResource( 24 )
centered = false
offset = Vector2( 45, 45 )

[node name="Player1HealthBar" type="Sprite" parent="GUI/Control/Player1Health"]

transform/pos = Vector2( 52.9994, 74.542 )
transform/scale = Vector2( 1, 0.5 )
texture = ExtResource( 25 )
centered = false
offset = Vector2( 0, -19 )

[node name="Life1" type="Sprite" parent="GUI/Control/Player1Health"]

transform/pos = Vector2( 96.5642, 131.341 )
texture = ExtResource( 26 )

[node name="Life2" type="Sprite" parent="GUI/Control/Player1Health"]

transform/pos = Vector2( 151.68, 131.341 )
texture = ExtResource( 26 )

[node name="Life3" type="Sprite" parent="GUI/Control/Player1Health"]

transform/pos = Vector2( 201.786, 131.341 )
texture = ExtResource( 26 )

[node name="Player1" type="Sprite" parent="GUI/Control/Player1Health"]

transform/pos = Vector2( 44.7883, 61.1933 )
texture = ExtResource( 27 )

[node name="Player2Health" type="Sprite" parent="GUI/Control"]

editor/display_folded = true
transform/pos = Vector2( 1025.15, 1.87669 )
transform/scale = Vector2( 0.672678, 0.672678 )
texture = ExtResource( 28 )
centered = false
offset = Vector2( -290, 45 )

[node name="Player2HealthBar" type="Sprite" parent="GUI/Control/Player2Health"]

transform/pos = Vector2( -60.0725, 73.0486 )
transform/scale = Vector2( 1, 0.5 )
texture = ExtResource( 29 )
centered = false
offset = Vector2( -53, -19 )

[node name="Life1" type="Sprite" parent="GUI/Control/Player2Health"]

transform/pos = Vector2( -98.1047, 123.154 )
texture = ExtResource( 30 )

[node name="Life2" type="Sprite" parent="GUI/Control/Player2Health"]

transform/pos = Vector2( -148.211, 123.154 )
texture = ExtResource( 30 )

[node name="Life3" type="Sprite" parent="GUI/Control/Player2Health"]

transform/pos = Vector2( -201.656, 123.154 )
texture = ExtResource( 30 )

[node name="Player2" type="Sprite" parent="GUI/Control/Player2Health"]

transform/pos = Vector2( -67.7222, 61.3573 )
texture = ExtResource( 27 )

[node name="WarningSigns" type="Node2D" parent="GUI/Control"]

[node name="MessageSprite" type="TextureFrame" parent="GUI/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 331.0
margin/top = 100.0
margin/right = 731.0
margin/bottom = 180.0
texture = ExtResource( 7 )
modulate = Color( 0.168627, 0.101961, 0.101961, 0.686275 )
expand = true
stretch_mode = 0

[node name="MessageText" type="RichTextLabel" parent="GUI/Control"]

anchor/left = 2
anchor/right = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.326172
margin/top = 104.0
margin/right = 0.716797
margin/bottom = 184.0
custom_fonts/normal_font = ExtResource( 21 )
custom_colors/default_color = Color( 0.984375, 0.872864, 0.872864, 1 )
custom_constants/line_separation = 3
bbcode/enabled = true
bbcode/bbcode = "Let the games begin! [color=#CCCCCC](Press ENTER to close message window.)[/color]"
visible_characters = -1

[node name="BackgroundForestTwo" type="Sprite" parent="."]

transform/pos = Vector2( 0, 601.853 )
z/z = -50
texture = ExtResource( 31 )
centered = false
offset = Vector2( 0, -1636 )
region = true
region_rect = Rect2( 0, 0, 1198, 1636 )

[node name="BackgroundForest" type="Sprite" parent="."]

transform/pos = Vector2( 0, 601.853 )
z/z = -30
texture = ExtResource( 32 )
centered = false
offset = Vector2( 0, -925 )
region = true
region_rect = Rect2( 0, 0, 1197, 925 )

[node name="BG" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="BackgroundSolid" type="Sprite" parent="BG"]

z/z = -10
texture = ExtResource( 7 )
centered = false
modulate = Color( 0.821152, 0.851535, 0.894531, 1 )
region = true
region_rect = Rect2( 0, 0, 1127, 638 )

[node name="Portal" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 567.864, 1.52588e-05 )
z/z = 25
texture = ExtResource( 33 )
centered = false
offset = Vector2( -456, -85 )
script/script = ExtResource( 34 )

[node name="PortalThunderBack1" type="Sprite" parent="Portal"]

visibility/opacity = 0.0
visibility/behind_parent = true
transform/pos = Vector2( -208.013, 96.4701 )
texture = ExtResource( 35 )

[node name="PortalThunderBack2" type="Sprite" parent="Portal"]

visibility/opacity = 0.0
visibility/behind_parent = true
transform/pos = Vector2( 192.94, 125.11 )
texture = ExtResource( 36 )

[node name="PortalThunder1" type="Sprite" parent="Portal"]

visibility/opacity = 0.0
visibility/behind_parent = true
transform/pos = Vector2( -250.219, 129.632 )
texture = ExtResource( 37 )

[node name="PortalThunder2" type="Sprite" parent="Portal"]

visibility/opacity = 0.0
visibility/behind_parent = true
transform/pos = Vector2( 263.785, 126.617 )
texture = ExtResource( 38 )

[node name="Light2D" type="Light2D" parent="Portal"]

transform/pos = Vector2( 15.0735, 24.1175 )
enabled = true
texture = ExtResource( 39 )
offset = Vector2( 0, 0 )
scale = 2.5
color = Color( 0.773602, 0.55304, 0.863281, 1 )
energy = 4.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[connection signal="finished" from="StreamPlayer" to="StreamPlayer" method="_on_StreamPlayer_finished"]


